Fix sidebar header overflow

--- a/less/jquery-sidebar/jquery-sidebar-core.less
+++ b/less/jquery-sidebar/jquery-sidebar-core.less
@@ -13,6 +13,7 @@
         height: 151px;
         background: rgb(38, 50, 56);
         color: #ffffff;
+        overflow: hidden;
         
         .sidebar-header-title {
             display: block;
